PR/39501: David Holland: Don't print the remainder of the line in the error context because it can confuse input parsing in warnings. A full explanation is in the code.